--- a/about.html
+++ b/about.html
@@ -41,7 +41,9 @@
   
 </section>
 
-
+<p>
+  Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam, nam nemo? Vel nobis veniam atque optio repellendus. Laboriosam rerum necessitatibus, itaque cum, sit dolorem eaque sapiente dolor neque pariatur officiis.
+</p>
 
 
 
