--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
 
   <div class="menu">
     <ul>
-      <li><a class="active" href="./web.html">Home</a></li>
+      <li><a class="active" href="./index.html">Home</a></li>
       <li><a href="./about.html">About</a></li>
       <li><a href="./contact.html">Contact</a></li>
       <li><a href="./bio-data.html">BioD ata</a></li>
