php config added

--- a/about.html
+++ b/about.html
@@ -22,7 +22,7 @@
 
   <div class="menu">
     <ul>
-        <li><a class="active" href="./index.html">Home</a></li>
+        <li><a class="active" href="./home.html">Home</a></li>
         <li><a href="./about.html">About</a></li>
         <li><a href="./contact.html">Contact</a></li>
         <li><a href="./bio-data.html">BioD ata</a></li>
@@ -33,7 +33,7 @@
 <section class="container-fluid">
 
   <div class="gallery">
-    <img src="two.jpg" width="500" height="500">
+    <img src="one.jpg" width="500" height="500">
 
     <div class="desc"></div>
   </div>
