--- a/contact.html
+++ b/contact.html
@@ -22,18 +22,18 @@
 
   <div class="menu">
     <ul>
-      <li><a class="active" href="./index.html">Home</a></li>
-      <li><a href="./about.html">About</a></li>
-      <li><a href="./contact.html">Contact</a></li>
-      <li><a href="./bio-data.html">BioD ata</a></li>
-    </ul>
+        <li><a class="active" href="./home.html">Home</a></li>
+        <li><a href="./about.html">About</a></li>
+        <li><a href="./contact.html">Contact</a></li>
+        <li><a href="./bio-data.html">BioD ata</a></li>
+      </ul>
   </div>
 
 
 <section class="container-fluid">
 
   <div class="gallery">
-    <img src="four.jpg" width="500" height="500">
+    <img src="two.jpg" width="500" height="500">
 
     <div class="desc"></div>
   </div>
